[tool.poetry]
name = "temporal-chatbot-gcp-vertex"
version = "0.1.0"
description = "Demonstrates how Temporal and GCP Vertex AI can be used to quickly build bulletproof AI applications."
authors = ["Neil Dahlke <neil.dahlke@temporal.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
vertexai = "^1.70.0"
temporalio = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
